# ffmpeg_streamer

./: CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: CMakeLists.txt  FFMPEG_SETUP.md  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/lotterwise/ffmpeg_streamer_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: ffmpeg_streamer.podspec
ios/Classes/: ffmpeg_streamer.c
lib/: ffmpeg_streamer.dart  ffmpeg_streamer_bindings_generated.dart
lib/src/decoder/: ffmpeg_decoder.dart
lib/src/ffi/: lotterwise_ffmpeg_bindings.dart
lib/src/models/: frame_data.dart  media_info.dart
lib/src/services/: batch_config_presets.dart  ffmpeg_service.dart  frame_batch_manager.dart
linux/: CMakeLists.txt
macos/: ffmpeg_streamer.podspec
src/: CMakeLists.txt  ffmpeg_core.c  ffmpeg_core.h  ffmpeg_streamer.h
windows/: CMakeLists.txt
